# C-CSV-Parser

./: CMakeLists.txt  Doxyfile  README.md  test.csv
examples/: cast_to_float.c  ignore_columns_as_floats.c  ignore_columns_as_strings.c  read_column_as_float.c  read_float_data.c  read_string_data.c  select_columns_as_floats.c  select_columns_as_strings.c
examples/data/: text.csv
include/: csvinternal.h  csvparser.h
include/cast/: cast.h
include/free/: free.h
include/ignore/: ignore.h
include/read/: read.h
include/select/: select.h
src/: csvinternal.c  csvparser.c
src/cast/: cast.c
src/free/: free.c
src/ignore/: ignore.c
src/read/: read.c
src/select/: select.c
